[package]
name = "memflow-pcileech"
version = "0.1.0"
authors = ["ko1N <ko1N1337@gmail.com>"]
edition = "2018"
description = "pcileech fpga connector for the memflow physical memory introspection framework"
homepage = "https://github.com/memflow/memflow-pcileech"
repository = "https://github.com/memflow/memflow-pcileech"
readme = "README.md"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
memflow-core = { git = "ssh://git@github.com/memflow/memflow.git", branch = "dev", features = ["plugins"] }
memflow-derive = { git = "ssh://git@github.com/memflow/memflow.git", branch = "dev" }
#memflow-core = { path = "../memflow/memflow-core", features = ["plugins"] }
#memflow-derive = { path = "../memflow/memflow-derive" }
log = { version = "0.4.8", default-features = false }
rusb = "0.6.0"
dataview = "0.1"
bitfield = "0.13.2"

[dev-dependencies]
clap = "2.33.0"
simple_logger = "1.0.1"

[features]
default = []
plugin = []

[[example]]
name = "read_pcileech"
path = "examples/read_pcileech.rs"
