[package]
name = "leechcore-sys"
version = "0.2.0-beta9"
authors = ["ko1N <ko1N1337@gmail.com>"]
edition = "2018"
readme = "../README.md"
license = "GPL-3.0"

links = "leechcore"

[dependencies]
ctor = "0.1"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
bindgen = { version = "^0.64.0", optional = true }

[features]
default = [ ]
bindgen = [ "dep:bindgen" ]
