[package]
name = "memflow-pcileech"
version = "0.2.0-beta5"
authors = ["ko1N <ko1N1337@gmail.com>"]
edition = "2018"
description = "qemu procfs connector for leechcore/pcileech"
documentation = "https://docs.rs/memflow-pcileech"
readme = "../README.md"
homepage = "https://memflow.github.io"
repository = "https://github.com/memflow/memflow-pcileech"
license = "GPL-3.0"
keywords = [ "memflow", "introspection", "memory" ]
categories = [ "api-bindings", "memory-management", "os" ]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
memflow = { version = "^0.2.0-beta", features = ["plugins", "memmapfiles"] }
leechcore-sys = { version = "0.2.0-beta1", path = "../leechcore-sys" }
log = "^0.4.14"

[dev-dependencies]
clap = { version = "^3.0.5", features = ["cargo"] }
simplelog = "^0.11.1"
memflow-win32 = { version = "^0.2.0-beta" }

[[example]]
name = "read_phys"
path = "examples/read_phys.rs"

[[example]]
name = "ps_win32"
path = "examples/ps_win32.rs"

[[example]]
name = "ps_inventory"
path = "examples/ps_inventory.rs"
