[package]
name = "memflow-pcileech"
version = "0.2.0"
authors = ["ko1N <ko1N1337@gmail.com>"]
edition = "2018"
description = "qemu procfs connector for leechcore/pcileech"
documentation = "https://docs.rs/memflow-pcileech"
readme = "../README.md"
homepage = "https://memflow.github.io"
repository = "https://github.com/memflow/memflow-pcileech"
license = "GPL-3.0"
keywords = [ "memflow", "introspection", "memory" ]
categories = [ "api-bindings", "memory-management", "os" ]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
memflow = { version = "0.2", features = ["plugins", "memmapfiles"] }
leechcore-sys = { version = "0.2", path = "../leechcore-sys" }
log = "0.4"
parking_lot = "0.12"

ureq = { version = "2.10", optional = true }
zip = { version = "2.6", optional = true }
indicatif = { version = "0.17", optional = true }
progress-streams = { version = "1.1", optional = true }

[dev-dependencies]
env_logger = "0.11"
memflow-win32 = { version = "0.2" }

[features]
default = ["download_drivers", "download_progress"]
bindgen = ["leechcore-sys/bindgen"]
download_drivers = ["ureq", "zip"]
download_progress = ["indicatif", "progress-streams"]

[[example]]
name = "read_phys"
path = "examples/read_phys.rs"

[[example]]
name = "ps_win32"
path = "examples/ps_win32.rs"

[[example]]
name = "ps_inventory"
path = "examples/ps_inventory.rs"
